(lang dune 3.5)

(name approx)

(generate_opam_files true)

(source
 (github TimeToStop/approx))

(authors "Ratushnyak E. A.")

(maintainers "Ratushnyak E. A.")

(license LICENSE)

(documentation https://github.com/TimeToStop/approx)

(package
 (name approx)
 (synopsis "Lab3")
 (description "Approximation")
 (depends ocaml dune))
; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
